// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceDescription renders with device 1`] = `
<div
  className="content"
>
  <StyledIconBase
    ariaLabel="Device"
    className="iconContent"
    iconName="CellPhone"
  />
  Super-Duper Gadget
</div>
`;

exports[`DeviceDescription renders with emulator 1`] = `
<div
  className="content"
>
  <StyledIconBase
    ariaLabel="Emulator"
    className="iconContent"
    iconName="Devices3"
  />
  Emulator Extraordinaire
</div>
`;
